# gcn-classic-to-kafka

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml  codeql-analysis.yml
gcn_classic_to_kafka/: cli.py  common.py  metrics.py  socket.py
gcn_classic_to_kafka/test/: test_cli.py  test_socket.py
gcn_to_kafka/: binary.py  cli.py  voevent.py
