[tool.poetry]
name = "gcn-classic-to-kafka"
version = "0.1.0"
description = "Pump GCN Notices to a Kafka broker"
authors = ["Leo Singer <leo.singer@ligo.org>"]

[tool.poetry.dependencies]
click = "*"
confluent-kafka = "*"
python = "^3.7"
pygcn = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.scripts]
gcn-classic-to-kafka = "gcn_classic_to_kafka.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
