[tool.poetry]
name = "gcn-classic-to-kafka"
version = "0.1.0"
description = "Pump GCN Notices to a Kafka broker"
license = "NASA-1.3"
authors = ["Leo Singer <leo.singer@ligo.org>"]

[tool.poetry.dependencies]
click = "*"
confluent-kafka = "1.8.3+bleeding.edge.2"  # FIXME: change to >= 1.9.0 when confluent-kafka 1.9.0 is released
python = "^3.9"
pygcn = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.poetry.scripts]
gcn-classic-to-kafka = "gcn_classic_to_kafka.cli:main"

[tool.coverage.run]
source = [
    "gcn_classic_to_kafka"
]
omit = [
    "*/test/*"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# FIXME: remove when confluent-kafka 1.9.0 is released
[[tool.poetry.source]]
name = "lpsinger"
url = "https://asd.gsfc.nasa.gov/Leo.Singer/pypi"
